--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-	
+	<style>
+		body {
+			padding-top: 50px;
+		}
+	</style>
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid"> 
@@ -11,7 +15,7 @@
 					<a class="navbar-brand" href="#">VSX</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse navbar-fixed-top">
+				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="#">Link<span class="sr-only">(current)</span></a></li>
 						<li><a href="#">Link</a></li>
