--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -3,7 +3,7 @@
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 	<style>
 		body {
-			padding-top: 50px;
+			padding-top: 60px;
 		}
 	</style>
 	<body>
@@ -38,14 +38,13 @@
 						<button type="submit" class="btn btn-default">Submit</button>
 					</form>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Link</a></li>
+						<li><a href="login.php">Login</a></li>
 						<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="#">Action</a></li>
-								<li><a href="#">Another action</a></li>
-								<li><a href="#">Something else here</a></li>
+								<li><a href="#">Profile</a></li>
+								<li><a href="#">Settings</a></li>
 								<li class="divider"></li>
-								<li><a href="#">Separated link</a></li>
+								<li><a href="#">Sign out</a></li>
 							</ul>
 						</li>
 					</ul>
