--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -3,7 +3,7 @@
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 	<style>
 		body {
-			padding-top: 60px;
+			padding-top: 80px;
 		}
 	</style>
 	<body>
@@ -12,14 +12,14 @@
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-					<a class="navbar-brand" href="#">VSX</a>
+					<a class="navbar-brand" href="index.php">VSX</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="#">Link<span class="sr-only">(current)</span></a></li>
 						<li><a href="#">Link</a></li>
-						<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
+						<!--<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="#">Action</a></li>
 							<li><a href="#">Another action</a></li>
@@ -29,29 +29,30 @@
 							<li class="divider"></li>
 							<li><a href="#">One more separated link</a></li>
 						</ul>
-						</li>
+						</li>-->
 					</ul>
-					<form class="navbar-form navbar-left" role="search">
+					<!--<form class="navbar-form navbar-left" role="search">
 						<div class="form-group">
 							<input type="text" class="form-control" placeholder="Search">
 						</div>
 						<button type="submit" class="btn btn-default">Submit</button>
-					</form>
+					</form>-->
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="login.php">Login</a></li>
-						<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
+						<li id="register_btn"><a href="register.php">Register</a></li>
+						<li id="login_btn"><a href="login.php">Login</a></li>
+						<li id="logged_in_btn" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
 								<li><a href="#">Profile</a></li>
 								<li><a href="#">Settings</a></li>
 								<li class="divider"></li>
-								<li><a href="#">Sign out</a></li>
+								<li><a href="logout.php">Sign out</a></li>
 							</ul>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-	<script src="bootstrap/js/jquery-1.11.3.min.js"></script>
-	<script src="bootstrap/js/bootstrap.js"></script>
+		<script src="bootstrap/js/jquery-1.11.3.min.js"></script>
+		<script src="bootstrap/js/bootstrap.js"></script>
 	</body>
 </html>
