--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -8,10 +8,10 @@
 					<p>Already have an account? <a href="login.php">Login</a></p>
 					<form action="register.php" method="POST" role="form">
 						<fieldset class="form-group">
-							<input name="usr" type="text" class="form-control" id="username" placeholder="Username">
+							<input name="username" type="text" class="form-control" id="username" placeholder="Username">
 							<input name="email" type="email" class="form-control" id="email" placeholder="Email">
 							<input name="passwd" type="password" class="form-control" id="passwd" placeholder="Password">
-							<input name="passwd_confim" type="password" class="form-control" id="passwd_confim" placeholder="Confirm Password">
+							<input name="passwd_confirm" type="password" class="form-control" id="passwd_confirm" placeholder="Confirm Password">
 						</fieldset>
 						<button type="submit" class="btn btn-primary">Register</button>
 					</form>
