--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -2,10 +2,12 @@
 <html lang="en">
 	<body>
 		<hr>
-		<div class="row">
-			<div class="text-center col-md-6 col-md-offset-3">
-				<h4>VSX - Virtual Stock Exchange</h4>
-				<p>2016 &middot; Lewis "Noki" Watson &middot; <a target="_blank" href="https://github.com/nokizorque/vsx">GitHub</a>
+		<div class="container">
+			<div class="row">
+				<div class="text-center col-md-6 col-md-offset-3">
+					<h4>VSX - Virtual Stock Exchange</h4>
+					<p>2016 &middot; Lewis "Noki" Watson &middot; <a target="_blank" href="https://github.com/nokizorque/vsx">GitHub</a>
+				</div>
 			</div>
 		</div>
 		<hr>
