--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -3,7 +3,7 @@
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 	<style>
 		body {
-			padding-top: 80px;
+			padding-top: 60px;
 		}
 	</style>
 	<body>
@@ -17,8 +17,8 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="#">Link<span class="sr-only">(current)</span></a></li>
-						<li><a href="#">Link</a></li>
+						<li id="index"><a href="index.php">Home</a></li>
+						<li id="stocks"><a href="stocks.php">Stocks</a></li>
 						<!--<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="#">Action</a></li>
@@ -54,5 +54,6 @@
 		</nav>
 		<script src="bootstrap/js/jquery-1.11.3.min.js"></script>
 		<script src="bootstrap/js/bootstrap.js"></script>
+		<script src="src/js/buttons.js"></script>
 	</body>
 </html>
