--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -8,7 +8,7 @@
 	</style>
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top">
-			<div class="container-fluid"> 
+			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -19,35 +19,10 @@
 					<ul class="nav navbar-nav">
 						<li id="index"><a href="index.php">Home</a></li>
 						<li id="stocks"><a href="stocks.php">Stocks</a></li>
-						<!--<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li class="divider"></li>
-							<li><a href="#">Separated link</a></li>
-							<li class="divider"></li>
-							<li><a href="#">One more separated link</a></li>
-						</ul>
-						</li>-->
+						<li id="stats"><a href="stats.php">Stats</a></li>
+						<li id="members"><a href="members.php">Members</a></li>
 					</ul>
-					<!--<form class="navbar-form navbar-left" role="search">
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Search">
-						</div>
-						<button type="submit" class="btn btn-default">Submit</button>
-					</form>-->
-					<ul class="nav navbar-nav navbar-right">
-						<li id="register_btn"><a href="register.php">Register</a></li>
-						<li id="login_btn"><a href="login.php">Login</a></li>
-						<li id="logged_in_btn" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="#">Profile</a></li>
-								<li><a href="#">Settings</a></li>
-								<li class="divider"></li>
-								<li><a href="logout.php">Sign out</a></li>
-							</ul>
-						</li>
+					<ul class="nav navbar-nav navbar-right" id="right-navbar">
 					</ul>
 				</div>
 			</div>
