--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<body>
 		<hr>
-		<div class="container">
+		<div class="container" id="footer">
 			<div class="row">
 				<div class="text-center col-md-6 col-md-offset-3">
 					<h4>VSX - Virtual Stock Exchange</h4>
