--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -4,7 +4,7 @@
 	<body>
 		<div class="container">
 			<div class="row">
-				<div class="text-center col-sm-6 col-md-4 col-md-offset-4">
+				<div class="text-center col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-4">
 					<p>Don't have an account? <a href="register.php">Sign up!</a></p>
 					<form action="login.php" method="POST" role="form">
 						<fieldset class="form-group">
