--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -4,7 +4,7 @@
 	<body>
 		<div class="container">
 			<div class="row">
-				<div class="text-center col-sm-6 col-md-4 col-md-offset-4">
+				<div class="text-center col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-4">
 					<p>Already have an account? <a href="login.php">Login</a></p>
 					<form action="register.php" method="POST" role="form">
 						<fieldset class="form-group">
