--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<style>
 		body {
-			padding-top: 60px;
+			margin-top: 60px;
 		}
 	</style>
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid">
-				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 					<a class="navbar-brand" href="index.php">VSX</a>
 				</div>
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse">
+				<div class="collapse navbar-collapse" id="defaultNavbar1">
 					<ul class="nav navbar-nav">
 						<li id="index"><a href="index.php">Home</a></li>
 						<li id="stocks"><a href="stocks.php">Stocks</a></li>
@@ -27,8 +25,8 @@
 				</div>
 			</div>
 		</nav>
-		<script src="bootstrap/js/jquery-1.11.3.min.js"></script>
-		<script src="bootstrap/js/bootstrap.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="bootstrap/js/bootstrap.min.js"></script>
 		<script src="src/js/buttons.js"></script>
 	</body>
 </html>
