--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -6,7 +6,7 @@
 			<div class="row">
 				<div class="text-center col-md-6 col-md-offset-3">
 					<h4>VSX &mdash; Virtual Stock Exchange</h4>
-					<p>2016 &middot; Lewis <i>Noki</i> Watson &middot; <a target="_blank" href="https://github.com/nokizorque/vsx">GitHub</a>
+					<p>2016 &middot; <a target="_blank" href="https://noki.zorque.xyz">Lewis <i>Noki</i> Watson</a> &middot; <a target="_blank" href="https://github.com/nokizorque/vsx">GitHub</a>
 				</div>
 			</div>
 		</div>
