Added navbar items for the about and contact pages

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -19,6 +19,8 @@
 						<li id="stocks"><a href="stocks.php">Stocks</a></li>
 						<li id="stats"><a href="stats.php">Stats</a></li>
 						<li id="members"><a href="members.php">Members</a></li>
+						<li id="contact"><a href="contact.php">Contact Us</a></li>
+						<li id="about"><a href="about.php">About</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right" id="right-navbar">
 					</ul>
