Made all fields on the login and register pages "required"

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -8,8 +8,8 @@
 					<p>Don't have an account? <a href="register.php">Sign up!</a></p>
 					<form action="login.php" method="POST" role="form">
 						<fieldset class="form-group">
-							<input name="email" type="email" class="form-control" id="email" placeholder="Email">
-							<input name="passwd" type="password" class="form-control" id="passwd" placeholder="Password">
+							<input name="email" type="email" class="form-control" id="email" placeholder="Email" required>
+							<input name="passwd" type="password" class="form-control" id="passwd" placeholder="Password" required>
 						</fieldset>
 						<button type="submit" class="btn btn-primary">Login</button>
 					</form>
