Additions relating to scaffolding for exchanges

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -17,6 +17,7 @@
 					<ul class="nav navbar-nav">
 						<li id="index"><a href="index.php">Home</a></li>
 						<li id="stocks"><a href="stocks.php">Stocks</a></li>
+						<li id="exchanges"><a href="exchanges.php">Exchanges</a></li>
 						<li id="stats"><a href="stats.php">Stats</a></li>
 						<li id="members"><a href="members.php">Members</a></li>
 						<li id="contact"><a href="contact.php">Contact Us</a></li>
